--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Bitter');
+
+* {
+  font-family: 'Bitter', cursive;  
+}
+
 .App {
   text-align: center;
 }
