--- a/src/components/CoinSelector/index.css
+++ b/src/components/CoinSelector/index.css
@@ -1,5 +1,6 @@
 .coin-selector select {
-  background-color: #d1ad0e;
+  background-color: #0e8ad1;
+  color: #fff;
   width: 300px;
   height: 50px;
   font-size: 1.25em;
