style main header

--- a/src/components/MainHeader/index.css
+++ b/src/components/MainHeader/index.css
@@ -1,4 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .main-header {
-  /* background-color: red; */
-  font-size: 1.5em;
+  background-color: #418dcf;
+  color: #fff;
+  font-size: 2em;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-header h1 {
+  font-family: 'Roboto', sans-serif;
+  text-shadow: 0 3px 5px #000;
 }
