--- a/src/components/MainHeader/index.css
+++ b/src/components/MainHeader/index.css
@@ -16,10 +16,12 @@
   font-size: 2em;
   height: 65vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .main-header h1 {
   text-shadow: 0 3px 5px #000;
+  margin: 0;
 }
